2008-04-28  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Added rbclt_shader_init

	* clutter/rbcltactor.c (rbclt_actor_set_shader)
	(rbclt_actor_shader, rbclt_actor_set_shader_param): New functions
	to wrap shader methods

	* clutter/rbcltshader.c: New wrapper for ClutterShader

	* examples/test-shader.rb: Port of test-shader.c

	* clutter/rbcltalpha.c (rbclt_alpha_initialize): ClutterAlpha
	objects are now intially unowned so the constructor has changed to
	reflect this

2008-04-27  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_get_relative_vertices): Added
	wrapper for clutter_actor_get_relative_vertices
	(rbclt_actor_should_pick_paint): Added wrapper for
	clutter_actor_should_pick_paint.

2008-04-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_apply_transform_to_point):
	Fixed to return the transformed vertex instead of the original
	point.
	(rbclt_actor_apply_relative_transform_to_point): New wrapper for
	clutter_actor_apply_relative_transform_to_point.

2008-04-25  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_abs_opacity): New function.
	(rbclt_actor_actor_id): Rename to actor_gid
	(rbclt_actor_set_scale): Remove gravity parameter.

2008-04-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Replaced the individual getters and
	setters for each rotation value with a single {get,set}_rotation
	method.

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourscale.c (rbclt_behaviour_scale_init):
	Fixed number of arguments required the constructor.

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* .gitignore: Added #*# files

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourscale.c
	(rbclt_behaviour_scale_initialize): Updated to use a start and and
	end parameter for both the x and y axes.

	* clutter/rbcltevent.c.in (rbclt_event_init): 
	* clutter/mkrbcltevent.rb: Removed CLUTTER_{2,3}BUTTON_PRESS.
